# wxwidget-template

./: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
